--- a/domain.yml
+++ b/domain.yml
@@ -68,6 +68,10 @@ definitions:
               type: number
             traitProtocolDbId:
               type: number
+      experimentLocations:
+        type: array
+        items:
+          $ref: '#/definitions/ExperimentLocation'
   ExperimentLocation:
     type: object
     description: experiment conducted in one specific location
