--- a/domain.yml
+++ b/domain.yml
@@ -126,8 +126,8 @@ definitions:
           plotArray:
             type: array
             description: a two-dimensiuon array containing the columns defined in exptLocationArrayHeaders
-            example: | 
-              [['12346','346','3','augmentedGroup','0','100'],['12346','346','3','treatment','1','1'],['12346','346','3','replicate','2','1'],['12346','346','3','subPlot','3','1']]
+            example: 
+              [["12346","346","3","augmentedGroup","0","100"],["12346","346","3","treatment","1","1"],["12346","346","3","replicate","2","1"],["12346","346","3","subPlot","3","1"]]
             items:
               type: array
               items:
